<resources>
    <string name="app_name">Donativ</string>
    <string name="content_description">image</string>

    <!--    LOGIN ACTIVITY-->
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>


    <!--    REGISTER ACCOUNT ACTIVITY-->
    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_conditions">I agree to the <u>Terms and Conditions</u></string>
    <string name="btn_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>

    <string name="btn_lbl_submit">SUBMIT</string>
    <string name="forgot_password_title_description">Enter your email address and we will send you an email to reset your password</string>

    <!--    REGISTER BUTTON VERIFICATION-->
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="err_msg_enter_mobile_number">Please enter your mobile number.</string>

    <!--    PROGRESS BAR-->
    <string name="progress_text">Progress text</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="register_success">You are registered successfully.</string>

    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_label_male">MALE</string>
    <string name="rb_label_female">FEMALE</string>
    <string name="btn_label_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied permission for storage. You can allow it from you device\'s permissions settings.</string>
    <string name="image_selection_failed">Image selection failed.</string>
    <string name="msg_profile_update_success">Your profile was updated successfully.</string>

    <!--    <string name="title_activity_dashboard">MainActivity</string>-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="title_donate">Donate</string>
    <string name="title_benefit">Benefit</string>
    <string name="title_profile">Profile</string>
    <string name="action_settings">Settings</string>

    <!-- Settings -->
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_edit_profile">EDIT PROFILE</string>

    <string name="btn_add_product">Add Product</string>
    <string name="btn_view_added_products">View my Products</string>
    <string name="btn_search_for_products">Search for Products</string>
    <string name="title_add_product">Add Product</string>

    <string name="action_add_product">Add Product</string>

    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_price">Product Price</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>

    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>

    <string name="product_uploaded_success_message">Your product was uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>

    <!-- ADD PRODUCT CATEGORY SPINNER OPTIONS -->
    <string-array name="product_category_names">
        <item>Nutrition</item>
        <item>Clothing</item>
        <item>Medication</item>
        <item>COVID</item>
        <item>Other</item>
    </string-array>

    <!-- SEARCH FOR PRODUCTS CATEGORIES -->
    <string name="title_nutrition">NUTRITION</string>
    <string name="title_clothing">CLOTHING</string>
    <string name="title_medication">MEDICATION</string>
    <string name="title_covid">COVID-19</string>
    <string name="title_all_products">ALL PRODUCTS</string>

    <string name="product_delete_success_message">Product deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_my_products">MY PRODUCTS</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Available Quantity</string>
    <string name="lbl_product_seller_phone_number">Phone Number</string>
    <string name="lbl_product_seller_name">Contact Name</string>
    <string name="product_price_instruction">Please specify whether the product is FREE or not. Add currency (LPB/USD)</string>
    <string name="lbl_product_contact_number">Contact Number:</string>
    <string name="no_products_requested_yet">No products requested yet.</string>
    <string name="title_view_products">VIEW PRODUCTS</string>
    <string name="title_view_requested_products">VIEW REQUESTED PRODUCTS</string>
    <string name="title_request_product">REQUEST PRODUCT</string>
    <string name="lbl_requested_product_description">Requested Product Description</string>
    <string name="btn_view_requested_products">VIEW REQUESTED PRODUCTS</string>


</resources>